почти доделали home.html

--- a/gallery/mainApp/templates/BaseGallery.html
+++ b/gallery/mainApp/templates/BaseGallery.html
@@ -64,7 +64,7 @@
             </nav>
         </div>
     </header>
-    <main>
+    <main class="main-zone">
         <form method="post" name="tag_form">
             {% csrf_token %}
             <div class="modal fade" id="TagModal" tabindex="-1" role="dialog" aria-labelledby="TagModalLabel" aria-hidden="true">
