--- a/gallery/mainApp/templates/Albums.html
+++ b/gallery/mainApp/templates/Albums.html
@@ -9,25 +9,25 @@
     </button>
 
     <form id="upload-form" action="" method="post" autocomplete="off" enctype="multipart/form-data">
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Укажите название альбома</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+        <div class="modal fade custom-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Укажите название альбома</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  {% csrf_token %}
+                  {{ album_form }}
+                </div>
+                <div class="modal-footer">
+                  <button type="submit" class="btn btn-primary">Создать</button>
+                </div>
+              </div>
             </div>
-            <div class="modal-body">
-              {% csrf_token %}
-              {{ album_form }}
-            </div>
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-primary">Создать</button>
-            </div>
-          </div>
         </div>
-      </div>
     </form>
 
     <div class="your-albums">
