--- a/gallery/mainApp/templates/Home.html
+++ b/gallery/mainApp/templates/Home.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 <div class="header">
   <h1 class="logo">
     <a href="#">Sharedphotos</a>
