--- a/gallery/mainApp/templates/AddTextToImage.html
+++ b/gallery/mainApp/templates/AddTextToImage.html
@@ -8,7 +8,7 @@
     <div style="display: inline-block; width: 70%; margin-top: 5%;">
         <div style=" width:40%; margin: auto; position: relative;">
             <div style="position: absolute; visibility: hidden; z-index: 1;" id="textOnImage">TEXT</div>
-            <img id="imageforchanging" style="display: block; margin:auto" src="{{photourl}}"  alt="photo" width="100%" height="auto">
+            <img id="imageforchanging" style="display: block; margin:auto" src="{% url 'show_image_orig' photoid %}"  alt="photo" width="100%" height="auto">
         </div>
     </div>
 
@@ -25,8 +25,12 @@
         
         <!-- <div style="font-size: 16px;">ДОБАВИТЬ ТЕКСТ</div> -->
         <div><input id="textOnImageValue" type="text" placeholder="ТЕКСТ"></div>
-        <div><input id="textOnImageColorValue" type="text" placeholder="ЦВЕТ"></div>
         <div><input id="textOnImageSizeValue" type="text" placeholder="РАЗМЕР"></div>
+        <div>
+            <p>ЦВЕТ </p>
+            <div><input id="textOnImageColorValue" type="color" id="colorpicker"  placeholder="ЦВЕТ"></div>
+        </div>
+       
         <button style="display: inline-block; margin: 3%" onclick="setTextVisibility()">ВСТАВИТЬ</button>
         <button style="display: inline-block;" onclick="removeText()">УБРАТЬ</button>
         <div class="sliders"><label for="textMoveOnX">Смещение по x:</label>
