--- a/gallery/mainApp/templates/BaseGallery.html
+++ b/gallery/mainApp/templates/BaseGallery.html
@@ -71,7 +71,7 @@
             </nav>
         </div>
     </header>
-    <main class="main-zone">
+    <main class="main-zone" id="style-3">
         <form method="post" name="tag_form">
             {% csrf_token %}
             <div class="modal fade" id="TagModal" tabindex="-1" role="dialog" aria-labelledby="TagModalLabel" aria-hidden="true">
