--- a/gallery/mainApp/templates/BaseGallery.html
+++ b/gallery/mainApp/templates/BaseGallery.html
@@ -41,7 +41,7 @@
         <input type="text" id="searchInput" list="metadataOptions" value="{{ search_query }}" placeholder="Search..." onkeypress="handleKeyPress(event)">
         <datalist id="metadataOptions">
             <option value="Дата создания:">
-            <option value="Автор:">
+            <option value="Дата загрузки:">
             <option value="Геолокация:">
             <option value="Тег:">
             <!-- Добавьте другие опции -->
