--- a/gallery/mainApp/templates/Gallery.html
+++ b/gallery/mainApp/templates/Gallery.html
@@ -25,6 +25,9 @@
                         {% endif %}
                     </h5>
                     <p class="card-text">Загружено {{file.created_at|date:"d.m.Y в H:i"}}</p>
+                    {% if file.date_taken %}
+                        <p class="card-text">Снято {{file.date_taken|date:"d.m.Y в H:i"}}</p>
+                    {% endif %}
                     {% if file.tags.all %}
                         <p>Теги:
                             {% for tag in file.tags.all %}
